added notifications .yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
-language: java
-notifications:
-  email:
-    - matthias@thinkaurelius.com
-    - marko@thinkaurelius.com
-    - dalaro@hopcount.org
-jdk:
-  - oraclejdk7
-  - openjdk7
-
 branches:
   only:
-    - master
+  - master
+jdk:
+- oraclejdk7
+- openjdk7
+language: java
+notifications:
+  email: false
+  slack:
+    rooms: flakycov:U2MeVOPjdi4up1U793ubeIUZ
+    template:
+    - Build <%{build_url}|#%{build_number}> (<%{compare_url}|%{commit}>) of %{repository}@%{branch} by %{author} %{result} in %{duration}
+    - 'dashbot: %{repository_name} %{build_id}'
